# platform

./: .gitignore  .pre-commit-config.yaml  404.html  EARTH_ENGINE_SETUP.md  README.md  docker-compose.dev.yml  docker-compose.yml  index.html  mkdocs.yml  next.config.js  objects.inv  package-lock.json  package.json  tailwind.config.js
.github/workflows/: code_checks.yml  deploy-gcp.yml  deploy.yml  docs.yml  seo-monitor.yml  unit_tests.yml
api/: index.html
design/: index.html
docs/: api.md  design.md  earth-engine-setup.md  index.md
docs/stylesheets/: extra.css
earth-engine-setup/: index.html
search/: search_index.json
src/app/: globals.css  layout.tsx  page.tsx
tender_tales/: .dockerignore  Dockerfile  Dockerfile.api  Dockerfile.base  Dockerfile.dev  Dockerfile.mcp  README.md  __init__.py  pyproject.toml
tender_tales/api/: __init__.py  config.py  logging_config.py  main.py  routes.py
tender_tales/mcp_server/: Dockerfile  README.md  __init__.py  config.py  logging_config.py  main.py  pyproject.toml  test_mcp_client.py  tools.py
tender_tales/services/: __init__.py  earth_engine.py  llm_service.py  logging_config.py  sentinel_imagery.py
tender_tales/shared/: __init__.py  logging_config.py
tender_tales/tests/: __init__.py  test_config.py  test_logging_config.py
tender_tales/tests/mcp_server/: test_mcp_client.py
ui/: .dockerignore  Dockerfile  Dockerfile.dev  README.md  next.config.js  package-lock.json  package.json  setup_oauth.sh  tailwind.config.js  tsconfig.json
ui/public/: sitemap.xml
ui/src/app/: globals.css  layout.tsx  page.tsx
ui/src/app/about/: page.tsx
ui/src/app/account/: page.tsx
ui/src/app/api/auth/[...nextauth]/: route.ts
ui/src/app/api/contact/: route.ts
ui/src/app/api/revalidate-sitemap/: route.ts
ui/src/app/auth/signin/: page.tsx
ui/src/app/blog/: page.tsx
ui/src/app/blog/whale-ship-strikes/: page.tsx
ui/src/app/contact/: page.tsx
ui/src/app/kadal/: page.tsx
ui/src/app/map/: page.tsx
ui/src/app/privacy/: page.tsx
ui/src/app/robots.txt/: route.ts
ui/src/app/services/conservation-partnership/: page.tsx
ui/src/app/services/pro-bono-consulting/: page.tsx
ui/src/app/sitemap.xml/: route.ts
ui/src/app/terms/: page.tsx
ui/src/components/: footer.tsx
ui/src/components/auth/: auth-provider.tsx  protected-route.tsx  signin-modal.tsx
ui/src/lib/: api.ts  auth-config.ts  auth.ts  build-sitemap.ts  earthengine.ts  reading-time.ts  sitemap-utils.ts
